# DynSyn

./: .gitignore  README.md  job.sh  pyproject.toml  requirements.txt  test.py
configs/DynSyn/: Arm-Bottle.json  Full-Gait.json  Hand-Reorient.json  Legs-Gait.json  Ostrich-Run.json  myofullwalk.json  myofullwalk_eval.json  myowalk-hilly.json  myowalk-rough.json  myowalk.json
configs/DynSynGen/: dynsyn.yaml
configs/E2E/: Arm-Bottle.json  Full-Gait.json  Hand-Reorient.json  Legs-Gait.json  Ostrich-Run.json  myowalk-hilly.json  myowalk-rough.json  myowalk.json
dynsyn/: __init__.py  dynsyn.py
dynsyn/algorithms/: __init__.py  dynsynPPO.py  dynsynSAC.py
dynsyn/algorithms/common/: dynsynLayer.py  utils.py
dynsyn/sb3_runner/: callback.py  runner.py  utils.py
dynsyn/sb3_runner/wrapper/: __init__.py  muscle_norm_wrapper.py  myosuite_wrapper.py
myosuite/: MUJOCO_LOG.TXT  requirements.txt  setup.py
myosuite/envs/myo/myobase/: __init__.py  walk_v1.py
myosuite/simhive/myo_sim/body/: myobody.xml
myosuite/simhive/myo_sim/torso/assets/: myotorso_chain.xml
reference_motion/: qpos_traj_myoFullBody.npy  qpos_traj_myofullbody_Subj04_walk_18.npy  ref_traj_Subj04_walk_18.npy
